{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 24,
  "lineage": "c69e2482-3cb8-794f-bb1d-8cb631d46933",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "wp_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-095fef44eb7bde03f",
            "id": "rtb-095fef44eb7bde03f",
            "owner_id": "361808305504",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wp_private"
            },
            "vpc_id": "vpc-06579bfd0aa813d01"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-b73b63a0",
            "arn": "arn:aws:ec2:us-east-1:361808305504:instance/i-05dfef021d53398e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm_access",
            "id": "i-05dfef021d53398e0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d5c4fd7b7eb8205d",
            "private_dns": "ip-10-0-1-170.ec2.internal",
            "private_ip": "10.0.1.170",
            "public_dns": "ec2-3-226-122-27.compute-1.amazonaws.com",
            "public_ip": "3.226.122.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0051d54cb2c247348",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0315097f1ec686df5",
            "tags": {
              "Name": "wp_web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-044e7cf2247b83d25"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_access_profile",
            "aws_iam_role.ssm_access_role",
            "aws_security_group.wp_public_sg",
            "aws_subnet.wp_public1_subnet",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wp_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0fb15bbf5e98604a6",
            "owner_id": "361808305504",
            "tags": {
              "Name": "wp_igw"
            },
            "vpc_id": "vpc-06579bfd0aa813d01"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0002f30af9fc1c3b4",
            "owner_id": "361808305504",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fb15bbf5e98604a6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp_public"
            },
            "vpc_id": "vpc-06579bfd0aa813d01"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_dev_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361808305504:security-group/sg-060cd586c663b1c61",
            "description": "Used for access to the dev instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060cd586c663b1c61",
            "ingress": [
              {
                "cidr_blocks": [
                  "76.176.159.21/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "76.176.159.21/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp_dev_sg",
            "name_prefix": null,
            "owner_id": "361808305504",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06579bfd0aa813d01"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361808305504:security-group/sg-044e7cf2247b83d25",
            "description": "Used for public and private instances for load balancer access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044e7cf2247b83d25",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp_public_sg",
            "name_prefix": null,
            "owner_id": "361808305504",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06579bfd0aa813d01"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_rds_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361808305504:security-group/sg-0eace7c161d8bf3cf",
            "description": "Used for DB instances",
            "egress": [],
            "id": "sg-0eace7c161d8bf3cf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-044e7cf2247b83d25",
                  "sg-060cd586c663b1c61"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wp_rds_sg",
            "name_prefix": null,
            "owner_id": "361808305504",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06579bfd0aa813d01"
          },
          "dependencies": [
            "aws_security_group.wp_dev_sg",
            "aws_security_group.wp_public_sg",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_private1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361808305504:subnet/subnet-0b6ce6083f4679a13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b6ce6083f4679a13",
            "map_public_ip_on_launch": false,
            "owner_id": "361808305504",
            "tags": {
              "Name": "wp_private1"
            },
            "vpc_id": "vpc-06579bfd0aa813d01"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_private2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361808305504:subnet/subnet-08ac9512fc41d6c6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-08ac9512fc41d6c6c",
            "map_public_ip_on_launch": false,
            "owner_id": "361808305504",
            "tags": {
              "Name": "wp_private2"
            },
            "vpc_id": "vpc-06579bfd0aa813d01"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_public1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361808305504:subnet/subnet-0315097f1ec686df5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0315097f1ec686df5",
            "map_public_ip_on_launch": true,
            "owner_id": "361808305504",
            "tags": {
              "Name": "wp_public1"
            },
            "vpc_id": "vpc-06579bfd0aa813d01"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361808305504:subnet/subnet-0dc0e02244cd01cb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0dc0e02244cd01cb6",
            "map_public_ip_on_launch": false,
            "owner_id": "361808305504",
            "tags": {
              "Name": "wp_rds1"
            },
            "vpc_id": "vpc-06579bfd0aa813d01"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361808305504:vpc/vpc-06579bfd0aa813d01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b424144ed207c19",
            "default_route_table_id": "rtb-095fef44eb7bde03f",
            "default_security_group_id": "sg-091bf85d8ae4356f3",
            "dhcp_options_id": "dopt-0655ec876d2552591",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06579bfd0aa813d01",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-095fef44eb7bde03f",
            "owner_id": "361808305504",
            "tags": {
              "Name": "wp_vpc"
            }
          }
        }
      ]
    }
  ]
}